--- a/combos.html
+++ b/combos.html
@@ -60,13 +60,13 @@
             list-style: none;
         }
         .product{
-            background-color: black;
+            background-color: white;
             width: 50%;
             height: 100%;
             text-align: center;
         }
         .kit{
-            background-color: var(--white);
+            background-color: var(--black);
             width: 50%;
             height: 100%;
             text-align: center;
@@ -74,20 +74,20 @@
         .product a{
             text-decoration: none;
             font-size: 1.8rem;
-            color: var(--white);
+            color: var(--black);
         }
         .kit a{
             text-decoration: none;
             font-size: 1.8rem;
-            color: var(--black);
+            color: var(--white);
         }
         .content{
-            /* background-image: url(./img/portada.jpg);
+            background-image: url(./img/portada.jpg);
             background-size: cover;
             background-repeat: no-repeat;
             background-position-x: -120px;
             background-position-y: 70px;
-            background-attachment: fixed; */
+            background-attachment: fixed;
             background-color: var(--white);
         }
         .article{
@@ -120,10 +120,10 @@
         <nav class="nav-bar">
             <ul>
                 <li class="product">
-                    <a href="/">Productos</a>
+                    <a href="./index.html">Productos</a>
                 </li>
                 <li class="kit"> 
-                    <a href="/">Combos</a>
+                    <a href="./combos.html">Combos</a>
                 </li>
             </ul>
         </nav>
