--- a/index.html
+++ b/index.html
@@ -119,10 +119,10 @@
         <nav class="nav-bar">
             <ul>
                 <li class="product">
-                    <a href="/">Productos</a>
+                    <a href="./index.html">Productos</a>
                 </li>
                 <li class="kit"> 
-                    <a href="/">Combos</a>
+                    <a href="./combos.html">Combos</a>
                 </li>
             </ul>
         </nav>
