--- a/combos.html
+++ b/combos.html
@@ -109,6 +109,8 @@
             background-color: var(--orange);
         }
     </style>
+
+    <script src="./index.js"></script>
 </head>
 <body>
     <div class="container">
@@ -130,7 +132,7 @@
         <section class="content">
             <article class="article">
                 <h1>Ramen</h1>
-                <img src="./img/ramen.jpg" alt="Ramen" class="Ramen">
+                <img id="ramen" src="./img/ramen.jpg" alt="Ramen" class="Ramen" onclick="openRamen()">
             </article>
             <article class="article">
                 <h1>Sushi</h1>
