Se agregan funciones a todos los items.

--- a/index.html
+++ b/index.html
@@ -204,8 +204,8 @@
             <article class="main" id="mainRamen">
                 
                 <p id="pMain"></p>
-                <img id="imgInf" class="imgInfo" src="https://i.postimg.cc/YqRzjfr3/pexels-cats-coming-400.jpg" alt="Ramen">
-                <button class="tipos" type="button" onclick="infoRamen()">Tipos de Ramen</button>
+                <img id="imgInf" class="imgInfo" src="" alt="Ramen">
+                <button id="buttonMore" class="tipos" type="button" onclick="infoRamen()">Tipos de Ramen</button>
             </article>
             <img class="iconClose" src="./img/cerrar.png" alt="cerrar" onclick="buttonClose()">
         </section>
