Mejoramiento de funciones.

--- a/combos.html
+++ b/combos.html
@@ -82,18 +82,23 @@
             color: var(--white);
         }
         .content{
-            background-image: url(./img/portada.jpg);
+            background-image: url(https://i.postimg.cc/Pr9KdPRt/pexels-maria-orlova-400.jpg);
             background-size: cover;
             background-repeat: no-repeat;
-            background-position-x: -120px;
-            background-position-y: 70px;
             background-attachment: fixed;
             background-color: var(--white);
         }
         .article{
             width: 80%;
+            color: var(--orange);
+            font-size: 2.5rem;
+            text-align: center;
             margin: 0 auto;
             padding-top: 48px;
+        }
+        .article h1{
+            text-shadow: 4px 4px 4px black;
+
         }
         .article img{
             width: 100%;
@@ -102,6 +107,7 @@
             object-fit: cover;
             border: 1px solid var(--orange);
             border-radius: 16px;
+            box-shadow: 4px 4px 4px black;
         }
         
         .footer{
@@ -131,26 +137,10 @@
         </nav>
         <section class="content">
             <article class="article">
-                <h1>Ramen</h1>
-                <img id="ramen" src="./img/ramen.jpg" alt="Ramen" class="Ramen" onclick="openRamen()">
+                <h1>Bandeja Mixta de Sushi</h1>
+                <img id="ramen" src="https://i.postimg.cc/ZqKLcp9x/pexels-olga-lioncat-400.jpg" alt="Ramen" class="Ramen" onclick="openRamen()">
             </article>
-            <article class="article">
-                <h1>Sushi</h1>
-                <img src="./img/sushi.jpg" alt="Sushi" class="Sushi">
-            </article>
-            <article class="article">
-                <h1>Arroz</h1>
-                <img src="./img/arroz.jpg" alt="Arroz" class="Arroz">
-            </article>
-            <article class="article">
-                <h1>Entradas</h1>
-                <img src="./img/entradas.jpg" alt="Entradas" class="Entradas">
-            </article>
-            <article class="article">
-                <h1>Bebidas</h1>
-                <img src="./img/bebida.jpg" alt="Bebidas" class="Bebidas">
-            </article>
-        </section>
+
         <footer class="footer">
             <p class="description-footer">Tokio | Comida Japonesa</p> 
             <p>Calle 9 # 24 -32, Yopal Casanare</p>        
