--- a/index.html
+++ b/index.html
@@ -86,13 +86,17 @@
             background-size: cover;
             background-repeat: no-repeat;
             background-position-x: -120px;
-            background-position-y: 70px;
             background-attachment: fixed;
+
         }
         .article{
             width: 80%;
             margin: 0 auto;
             padding-top: 48px;
+
+        }
+        .article h1{
+            text-shadow: 4px 4px 4px black;
         }
         .article img{
             width: 100%;
@@ -101,6 +105,8 @@
             object-fit: cover;
             border: 1px solid var(--orange);
             border-radius: 16px;
+            box-shadow: 4px 4px 4px black;
+
         }
         .back{
             display: none;
@@ -111,7 +117,6 @@
             top: 0;
         }
         .main{
-            /* display: none; */
             position: relative;
             width: 90%;
             min-height: 50%;
@@ -177,7 +182,7 @@
                 </li>
             </ul>
         </nav>
-        <section class="content">
+        <section class="content" id="content">
             <article class="article">
                 <h1>Ramen</h1>
                 <img src="./img/ramen.jpg" alt="Ramen" class="Ramen" onclick="ramen()">
