--- a/combos.html
+++ b/combos.html
@@ -122,7 +122,7 @@
     <div class="container">
 
         <header class="header">
-            <img src="./img/logo.png" alt="Logo" class="logo">
+            <img src="https://i.postimg.cc/V65zBJJ6/logo.png" alt="Logo" class="logo">
             <h1 class="title">Comida Japonesa</h1>
         </header>
         <nav class="nav-bar">
