--- a/src/infoSushi.html
+++ b/src/infoSushi.html
@@ -11,7 +11,7 @@
 
     <title>Tokio | Comida Japonesa</title>
 
-    <script src="./src/info.js"></script>
+    <script src="./infoSushi.js"></script>
 
     <style>
         :root{
@@ -85,7 +85,7 @@
         }
         .content{
             min-height: calc(100vh - 160px);
-            background-image: url(https://i.postimg.cc/gcs1F1LY/pexels-katerina-holmes-400.jpg);
+            background-image: url(https://i.postimg.cc/SNX7t4Xt/pexels-ricardo-rojas-400.jpg);
             background-size: cover;
             background-repeat: no-repeat;
             background-attachment: fixed;
@@ -95,17 +95,10 @@
             margin: 0 auto;
             padding-top: 24px;
         }
-        #imgPollo{
+        .imgRamen{
             display: none;
             width: 100%;
-        }
-        #imgMar{
-            display: none;
-            width: 100%;
-        }
-        #imgMixto{
-            display: none;
-            width: 100%;
+            margin-bottom: 20px;
         }
         #item{
             text-shadow: 4px 4px 4px var(--black);
@@ -119,40 +112,40 @@
     <div class="container">
 
         <header class="header">
-            <img src="./img/logo.png" alt="Logo" class="logo">
+            <img src="https://i.postimg.cc/V65zBJJ6/logo.png" alt="Logo" class="logo">
             <h1 class="title">Comida Japonesa</h1>
         </header>
         <nav class="nav-bar">
             <ul>
                 <li class="product">
-                    <a href="./index.html">Productos</a>
+                    <a href="../index.html">Productos</a>
                 </li>
                 <li class="kit"> 
-                    <a href="./combos.html">Combos</a>
+                    <a href="../combos.html">Combos</a>
                 </li>
             </ul>
         </nav>
         <section class="content" id="content">
             <article class="article">
-                <div id="item" onclick="ramenPollo()">
-                    <h2 id="title">Ramen de Pollo</h2>
-                    <h2 id="precio">$16.500</h2>
+                <div id="item" onclick="breakTempura()">
+                    <h2 id="title">Break Tempura</h2>
+                    <h2 id="precio">$24.000</h2>
                 </div>
-                <img class="imgRamen" id="imgPollo" src="https://i.postimg.cc/sxS3D4tP/ramen-Pollo-400.png" alt="Producto">
+                <img class="imgRamen" id="imgBreakTempura" src="https://i.postimg.cc/XvjHphJK/break-Tempura-400.png" alt="Producto">
             </article>
             <article class="article">
-                <div id="item" onclick="ramenMar()">
-                    <h2 id="title">Ramen de Mar</h2>
-                    <h2 id="precio">$21.000</h2>
+                <div id="item" onclick="breakMix()">
+                    <h2 id="title">Break Mix</h2>
+                    <h2 id="precio">$24.000</h2>
                 </div>
-                <img class="imgRamen" id="imgMar" src="https://i.postimg.cc/hG2Rqwzk/ramen-Mar-400.png" alt="Producto">
+                <img class="imgRamen" id="imgBreakMix" src="https://i.postimg.cc/sXwRM7sx/break-Mix-400.png" alt="Producto">
             </article>
             <article class="article">
-                <div id="item" onclick="ramenMixto()">
-                    <h2 id="title">Ramen de Mixto</h2>
-                    <h2 id="precio">$19.500</h2>
+                <div id="item" onclick="breakFresh()">
+                    <h2 id="title">Break Fresh</h2>
+                    <h2 id="precio">$26.000</h2>
                 </div>
-                <img class="imgRamen" id="imgMixto" src="https://i.postimg.cc/053nwR42/ramen-Mixto-400.png" alt="Producto">
+                <img class="imgRamen" id="imgBreakFresh" src="https://i.postimg.cc/kGNcwFYF/break-Fresh-400.png" alt="Producto">
             </article>
         </section>
         <footer class="footer">
