Adicion de sushi

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             font-size: 1.8rem;
             color: var(--black);
         }
-        .content{
+        .container{
             background-image: url(https://i.postimg.cc/5t7Pvycn/portada-400.jpg);
             background-size: cover;
             background-repeat: no-repeat;
@@ -91,7 +91,9 @@
             width: 80%;
             margin: 0 auto;
             padding-top: 48px;
-
+        }
+        .article:nth-last-child(1){
+            margin-bottom: 24px;
         }
         .article h1{
             text-shadow: 4px 4px 4px black;
@@ -158,6 +160,8 @@
         .footer{
             height: 50px;
             background-color: var(--orange);
+            padding-left: 8px;
+
         }
     </style>
 
