--- a/src/infoRamen.html
+++ b/src/infoRamen.html
@@ -99,13 +99,17 @@
             display: none;
             width: 100%;
             margin-bottom: 20px;
-
         }
         #item{
             text-shadow: 4px 4px 4px var(--black);
             display: flex;
             justify-content: space-between;
             font-size: 1.3rem;
+        }
+        .footer{
+            height: 50px;
+            background-color: black;
+            padding-left: 8px;
         }
     </style>
 </head>
