--- a/src/infoSushi.html
+++ b/src/infoSushi.html
@@ -29,10 +29,16 @@
             font-size: 62.5%;
             font-family: 'Kalam', cursive;
         }
+        body{
+            background-color: black;
+            background-image: url(https://i.postimg.cc/SNX7t4Xt/pexels-ricardo-rojas-400.jpg);
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+        }
         .container{
             width: 100%;
             height: 100%;
-            background-color: black;
             color: white;
             font-size: 1.6rem;
         }
@@ -83,11 +89,7 @@
             font-size: 1.8rem;
             color: var(--black);
         }
-        .container{
-            background-image: url(https://i.postimg.cc/SNX7t4Xt/pexels-ricardo-rojas-400.jpg);
-            background-size: cover;
-            background-repeat: no-repeat;
-            background-attachment: fixed;
+        .content{
         }
         .article{
             width: 90%;
@@ -109,9 +111,25 @@
             font-size: 1.3rem;
         }
         .footer{
+            position: fixed;
+            bottom: 0;
+            width: 100%;
             height: 50px;
             background-color: black;
             padding-left: 8px;
+        }
+        @media (min-width: 500px){
+            .content{
+                width: 80%;
+                margin: 0 auto;
+                margin-top: 24px;
+            }
+            .nav-bar a{
+                font-size: 2.5rem;
+            }
+            .article h2{
+                font-size: 2.2rem;
+            }
         }
     </style>
 </head>
