--- a/index.html
+++ b/index.html
@@ -117,6 +117,9 @@
             background-color: rgba(0, 0, 0, 0.445);
             top: 0;
         }
+        .iframe{
+            display: none;
+        }
         .main{
             position: relative;
             width: 90%;
@@ -220,9 +223,7 @@
             .content{
                 max-width: 1024px;
                 margin: 0 auto;
-                /* display: grid;
-                grid-template-columns: auto auto;
-                justify-content: space-between; */
+
             }
             
             .article{
@@ -254,6 +255,24 @@
                 display: block;
                 margin: 12px 0 0 24px;
                 font-size: 2.2rem;
+            }
+            .main{
+                width: 70%;
+                height: 70%;
+                margin-top: 110px;
+                
+            }
+            .iframe{
+                display: block;
+                width: calc(100% - 4px);
+                height: calc(100% - 4px);
+                position: absolute;
+                z-index: 2;
+                left: 0;
+                right: 0;
+                margin: auto;
+                margin-top: -22px;
+                border-radius: 40px;
             }
             .footer{
                 margin-top: 56px;
@@ -319,6 +338,7 @@
         </section>
         <section class="back" id="back">
             <article class="main" id="mainRamen">
+                <iframe id="iFrame" src="" frameborder="0" class="iframe"></iframe>
                 <p id="pMain"></p>
                 <img id="imgInf" class="imgInfo" src="" alt="Ramen">
                 <a id="infoA" href="">
