--- a/src/infoRamenDesk.html
+++ b/src/infoRamenDesk.html
@@ -42,57 +42,16 @@
             color: white;
             font-size: 1.6rem;
         }
-        .header{
-            height: 70px;
-            width: 100%;
-            display: flex;
-            align-items: center;
-            background: linear-gradient(90deg, rgb(0, 0, 0) 0%, rgba(186,17,36,1) 75%, rgba(186,17,36,1) 100%);
-            text-shadow: 4px 4px var(--black);
-            top: 0;
-            position: fixed;
-        }
-        .header img{
+        /* .logo{
             width: 80px;
-        }
-        .nav-bar{
-            margin-top: 70px;
-            background-color: var(--orange);
-            height: 40px;
-        }
-        .nav-bar ul{
-            height: 40px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            list-style: none;
-        }
-        .product{
-            background-color: black;
-            width: 50%;
-            height: 100%;
-            text-align: center;
-        }
-        .kit{
-            background-color: var(--white);
-            width: 50%;
-            height: 100%;
-            text-align: center;
-        }
-        .product a{
-            text-decoration: none;
-            font-size: 1.8rem;
-            color: var(--white);
-        }
-        .kit a{
-            text-decoration: none;
-            font-size: 1.8rem;
-            color: var(--black);
-        }
+        } */
         .article{
             width: 90%;
             margin: 0 auto;
             padding-top: 24px;
+        }
+        .article:nth-last-child(1){
+            margin-bottom: 24px;
         }
         .imgRamen{
             display: none;
@@ -105,23 +64,16 @@
             justify-content: space-between;
             font-size: 1.3rem;
         }
-        .footer{
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-            height: 50px;
-            background-color: black;
-            padding-left: 8px;
-        }
+
         @media (min-width: 500px){
             .content{
                 width: 80%;
                 margin: 0 auto;
                 margin-top: 24px;
             }
-            .nav-bar a{
+            /* .nav-bar a{
                 font-size: 2.5rem;
-            }
+            } */
             .article h2{
                 font-size: 2.2rem;
             }
@@ -130,21 +82,6 @@
 </head>
 <body>
     <div class="container">
-
-        <header class="header">
-            <img src="https://i.postimg.cc/V65zBJJ6/logo.png" alt="Logo" class="logo">
-            <h1 class="title">Comida Japonesa</h1>
-        </header>
-        <nav class="nav-bar">
-            <ul>
-                <li class="product">
-                    <a href="../index.html">Productos</a>
-                </li>
-                <li class="kit"> 
-                    <a href="../combos.html">Combos</a>
-                </li>
-            </ul>
-        </nav>
         <section class="content" id="content">
             <article class="article">
                 <div id="item" onclick="ramenPollo()">
@@ -168,10 +105,6 @@
                 <img class="imgRamen" id="imgMixto" src="https://i.postimg.cc/053nwR42/ramen-Mixto-400.png" alt="Producto">
             </article>
         </section>
-        <footer class="footer">
-            <p class="description-footer">Tokio | Comida Japonesa</p> 
-            <p>Calle 9 # 24 -32, Yopal Casanare</p>        
-            </footer>
     </div>
 </body>
 </html>
